# Touhou-Tales-of-Danmaku

./: .dockerignore  .gitignore  .prettierignore  CONTRIBUTING.md  Dockerfile  Dockerfile.tauri  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: release.yml
assets/json/: dialogues.json
assets/styles/: characters.css  credits.css  difficulty.css  ending.css  fonts.css  game.css  home.css  keyconfig.css  leaderboard.css  music-room.css  options.css  practice-stage.css  save-score.css  special.css  spellcard-practice.css  styles.css
docker/: Dockerfile.linux  Dockerfile.windows
scripts/: generate-sprite-manifest.mjs
server/: express.ts  validation.ts
server/db/: index.ts  scores.ts  sessions.ts  settings.ts  users.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs
src-tauri/src/db/: mod.rs  scores.rs  settings.rs  users.rs
src/characters/: Characters.ts  characters.json
src/entities/: Boss.ts  Bullet.ts  Enemy.ts  Item.ts  Player.ts  Power.ts  Projectile.ts
src/game/: Constants.ts  FantasySealBomb.ts  GameLoop.ts  GameState.ts  MasterSparkBomb.ts  PlayerBuilder.ts  PlayerPosition.ts  SpellcardRegistry.ts  StageScript.ts
src/patterns/: PatternEngine.ts  PatternLibrary.ts
src/scenes/: BossHUD.ts  CharacterScene.ts  DialogueBox.ts  DifficultyScene.ts  GameHUD.ts  GameOverMenu.ts  GameScene.ts  HomeScene.ts  KeyConfigScene.ts  LeaderboardScene.ts  (+8 more)
(+187 files in other folders)
