[package]
name = "touhou-tales-of-danmaku"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19", default-features = false, features = ["symphonia-wav"] }
lewton = "0.10"
ogg = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
